# bevy_smud

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
assets/: bevy.wgsl  bevy_on_fire.wgsl  colorize.wgsl  custom_material.wgsl  fragment.wgsl  prelude.wgsl  shapes.wgsl  smud.wgsl  star_bevy.wgsl  vertex.wgsl  view_bindings.wgsl  vinik24.json
assets/fills/: cubic_falloff.wgsl  fire.wgsl  outline.wgsl  simple.wgsl
assets/gallery/: blobby_cross.wgsl  box.wgsl  circle.wgsl  donut.wgsl  egg.wgsl  ellipse.wgsl  heart.wgsl  hexagon.wgsl  horseshoe.wgsl  moon.wgsl  pie.wgsl  rounded_x.wgsl  segment.wgsl  stairs.wgsl  star_4.wgsl  star_5.wgsl  triangle.wgsl  vesica.wgsl
assets/shapes/: annulus.wgsl  capsule.wgsl  circle.wgsl  circular_sector.wgsl  ellipse.wgsl  rectangle.wgsl  regular_polygon.wgsl  rhombus.wgsl
editor/: Cargo.toml
editor/src/: main.rs
editor/templates/fill/: outline.wgsl  simple.wgsl
editor/templates/sdf/: blobby_cross.wgsl  circle.wgsl
examples/: additive_blending.rs  basic.rs  basic_shapes.rs  bench.rs  bevy.rs  bevy_on_fire.rs  bevy_primitives.rs  bloom.rs  custom_fill.rs  fill_params_test.rs  gallery.rs  hot_reload.rs  oscilloscope.rs  params.rs  params_comparison.rs  picking.rs  render_layers.rs  sorting.rs  time.rs  tonemapping.rs  transforms.rs  ui.rs  ui_button.rs
src/: bevy_primitives.rs  bundle.rs  components.rs  inspectable_plugin.rs  lib.rs  picking_backend.rs  sdf.rs  sdf_assets.rs  shader_loading.rs  ui.rs  util.rs
