[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development", "rendering", "graphics"]
description = "2d sdf shape renderer plugin for Bevy"
edition = "2021"
keywords = ["gamedev", "bevy", "sdf"]
license = "MIT OR Apache-2.0"
name = "bevy_smud"
repository = "https://github.com/johanhelsing/bevy_smud"
version = "0.7.0"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_asset",         # needed for handle ids
] }
bytemuck = { version = "1.15.0", features = ["derive"] }
copyless = "0.1"
bitflags = "2.5"
fixedbitset = "0.5"

[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_winit",
  "x11",            # github actions runners don't have libxkbcommon installed, so can't use wayland
  "file_watcher",
] }
bevy_asset_loader = "0.21"
bevy_lospec = "0.8"
bevy_pancam = "0.12"
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
