[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development", "rendering", "graphics"]
description = "2d sdf shape renderer plugin for Bevy"
edition = "2024"
keywords = ["gamedev", "bevy", "sdf"]
license = "MIT OR Apache-2.0"
name = "bevy_smud"
repository = "https://github.com/johanhelsing/bevy_smud"
version = "0.12.0"

[features]
default = ["bevy_picking", "bevy_primitives", "bevy_ui"]
bevy_picking = ["bevy/bevy_picking"]
bevy_ui = ["bevy/bevy_ui_render"]
bevy_primitives = []

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "bevy_asset",         # needed for handle ids
  "bevy_core_pipeline",
  "bevy_log",
  "bevy_render",
  "multi_threaded",
] }
bytemuck = { version = "1.15.0", features = ["derive"] }
copyless = "0.1"
bitflags = "2.5"
fixedbitset = "0.5"
uuid = "1.10.0"

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "bevy_post_process",
  "bevy_sprite_render",
  "bevy_state",
  "bevy_winit",
  "x11",            # github actions runners don't have libxkbcommon installed, so can't use wayland
  "file_watcher",
] }
bevy_asset_loader = "0.24.0-rc.1"
bevy_lospec = "0.11"
bevy_pancam = "0.19"
rand = "0.9"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
