[package]
edition = "2024"
name = "editor"
version = "0.0.0"
publish = false

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "x11", # github actions runners don't have libxkbcommon installed, so can't use wayland
] }
bevy_egui = "0.38"
bevy_smud = { path = ".." }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
