[package]
edition = "2024"
name = "editor"
version = "0.0.0"
publish = false

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "x11", # github actions runners don't have libxkbcommon installed, so can't use wayland
] }
bevy_egui = "0.38"
bevy_smud = { path = ".." }
egui_extras = { version = "0.33.0", features = ["syntect"] }
include_dir = "0.7.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
